--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <style>
-      
+      p {
+        color: green;
+      }
     </style>
   </head>
   <body>
    <p> I like gif that are cringe </p>
-    img src''http://pm1.narvii.com/7787/8f963d7b92b29dd69be54fe04184d43a18ae7970r1-600-437v2_uhq.jpg''
-   
+   <img src="http://pm1.narvii.com/7787/8f963d7b92b29dd69be54fe04184d43a18ae7970r1-600-437v2_uhq.jpg">
   </body>
 </html>
